--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -55,16 +55,12 @@
     list-style-type: none;
     padding: 0;
     margin: 0px;
-    border-radius: 3px;
-    border-left: 5px solid var(--course-sidebar-border-color);
-    background-color:  var(--course-sidebar-bg-color);
+    border-left: 5px solid rgb(215, 215, 215);
 }
 
 .sidebar__item{
     text-align: left;
     padding: 0px 5px 0px 15px;
-    border-top: 2px solid var(--course-sidebar-border-color);
-    
 }
 
 .sidebar__link__active{
